body overflow fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,11 @@ html {
     height: 100%;
 }
 
+body{
+    overflow: hidden;
+    height: 100%;
+}
+
 .react-confirm-alert-overlay{
     background: white;
     -webkit-animation: react-confirm-alert-fadeIn 0.0s 0.s forwards;
